Fix td, th alignment in the dataset upload modal

--- a/client/galaxy/style/scss/ui.scss
+++ b/client/galaxy/style/scss/ui.scss
@@ -353,9 +353,11 @@ $ui-margin-horizontal-large: 10px;
     th {
         text-align: center;
         white-space: nowrap;
+        padding: 0.5rem;
     }
     td {
         margin: 0px;
+        padding: 0.5rem;
         .ui-button-icon {
             line-height: 1.2em;
         }
